--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,10 @@
         <td th:text="*{sha_pass}">password</td>
     </tr>
     </tbody>
+    <form method="post" action="/test">
+        <input type="text" name="pass"/>
+        <input type="submit" value="送信"/>
+    </form>
 </table>
 </body>
 </html>
